endpoint dasar selesai
